--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
     defaultConfig {
         multiDexEnabled true
         applicationId "com.mappls.sdk.demo"
-        minSdkVersion 16
-        targetSdkVersion 33
+        minSdk 16
+        targetSdk 34
         vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
@@ -44,21 +44,21 @@ android {
 
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.20"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     implementation 'com.mappls.sdk:place-widget:2.1.0'
-    implementation 'com.mappls.sdk:mappls-android-sdk:8.0.8'
+    implementation 'com.mappls.sdk:mappls-android-sdk:8.1.0'
 
     //Annotation Plugin
     implementation 'com.mappls.sdk:annotation-plugin:1.0.1'
 
-    implementation 'com.mappls.sdk:directions-plugin:1.0.1'
+    implementation 'com.mappls.sdk:directions-plugin:1.0.3'
 
     implementation 'com.mappls.sdk:scalebar-plugin:1.0.0'
     implementation 'com.mappls.sdk:geofence-ui:1.0.0'
@@ -66,11 +66,13 @@ dependencies {
     //for nearby widget
     implementation 'com.mappls.sdk:nearby-ui:1.0.2'
 
-    implementation 'com.mappls.sdk:driving-range-plugin:1.0.0'
+    implementation 'com.mappls.sdk:driving-range-plugin:1.1.0'
     //for direction widget
-    implementation 'com.mappls.sdk:direction-ui:1.2.2'
+    implementation 'com.mappls.sdk:direction-ui:2.0.0'
     //Geoanalytics plugin
-    implementation 'com.mappls.sdk:geoanalytics-plugin:1.0.0'
+    implementation 'com.mappls.sdk:geoanalytics-plugin:1.1.0'
+
+    implementation 'com.mappls.sdk:markerview-plugin:1.0.0'
     //for location
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
