--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     implementation 'com.mappls.sdk:place-widget:2.2.0'
-    implementation 'com.mappls.sdk:mappls-android-sdk:8.2.0'
+    implementation 'com.mappls.sdk:mappls-android-sdk:8.2.1'
 
     //Annotation Plugin
     implementation 'com.mappls.sdk:annotation-plugin:1.0.1'
@@ -68,6 +68,8 @@ dependencies {
     implementation 'com.mappls.sdk:direction-ui:2.1.1'
     //Geoanalytics plugin
     implementation 'com.mappls.sdk:geoanalytics-plugin:1.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.6.2'
 
     //for location
     implementation 'com.google.android.gms:play-services-location:21.0.1'
